src/App.css
/* ... */
.pickup {
  display: flex;
  align-items: center;
  justify-content: center;
  column-gap: 1rem;
  text-align: center;
  font-size: 20px;
  color: #fff;
  font-size: 14px;
  z-index: 100;
}
.pickup-title {
  font-weight: 500;
  z-index: 100;
}
.pickup-img-container {
  width: 80px;
  height: 80px;
  border-radius: 50%;
  background-color: #fff;
  z-index: 100;
}
.pickup img {
  width: 40px;
}
.leaf-img {
  position: absolute;
  height: 202px;
  left: 0;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
}
.hero-left-img {
  position: absolute;
  width: auto;
  height: 700px;
  top: 18%;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  z-index: 1;
}
.hero-right-img {
  position: absolute;
  right: 0;
  top: 13%;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  z-index: 1;
}

/* ========== ABOUT SECTION STYLES */
.about-section-title {
  display: flex;
  justify-content: start;
  align-items: center;
  font-size: 22px;
  font-weight: 500;
  column-gap: 0.5rem;
  margin-bottom: 1.5rem;
}
.title-logo {
  width: 46px;
  height: 26.07px;
}
.title-part-1 {
  color: var(--section-title-first-color);
}
.title-part-2 {
  color: var(--section-title-second-color);
}

.about-text {
  font-size: 44px;
  font-weight: bold;
  margin-bottom: 1rem;
}
.about-img {
  position: absolute;
  right: 5%;
  top: 52.75rem;
  z-index: -1;
}
.about-text-bottom-1 {
  color: #3e7f51;
}
.about-text-bottom-2 {
  color: #ff5c00;
}
.about-sub-text {
  font-size: 18px;
  width: 58%;
}
.about-us-list {
  margin-top: 2rem;
  display: flex;
  column-gap: 5rem;
}
.about-us-list ul li {
  margin-bottom: 2rem;
  display: flex;
  justify-content: start;
  align-items: center;
  font-size: 20px;
  font-weight: 500;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
}
.about-round {
  background-image: url("./assets/images/about-circle.png");
  height: 40px;
  width: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 1rem;
}
.about-tick {
  height: 34px;
  width: 44px;
}
.about-btn {
  background-color: var(--button-bg-color);
  padding: 0.9rem 1rem;
  outline: none;
  border: none;
  border-radius: 15px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 16px;
  color: #fff;
  column-gap: 0.6rem;
  cursor: pointer;
}
.about-btn-icon {
  font-size: 20px;
}
/* NEWS SECTION STYLES */
.news-section-title {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 22px;
  font-weight: 500;
}
.news-sub-title {
  font-size: 45px;
  font-weight: bold;
  margin: 1rem 0;
  text-align: center;
}
.news-sub-title-part-1 {
  color: #3e7f51;
}
.news-sub-title-part-2 {
  background: linear-gradient(
    90deg,
    #3e7f51 40%,
    #6bae78 45%,
    #ff8c33 55%,
    #ff5c00 60%
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  text-fill-color: transparent;
}
.news-sub-title-part-3 {
  color: #ff5c00;
}
.news-card-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 1rem;
  padding: 10px;
}

.news-card-container > div:nth-child(1) {
  background-color: #f9f9f9;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
}

.news-card-container > div:nth-child(2) {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto auto;
  grid-gap: 1rem;
}

.news-card-container > div:nth-child(2) > div:nth-child(1) {
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.news-card-container > div:nth-child(2) > div:nth-child(2) {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 1rem;
}

.news-card-container > div:nth-child(2) > div:nth-child(2) > div {
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
}
.news-card-container img {
  width: 100%;
}
.card-body {
  padding: 1rem;
}
.card-body p {
  font-size: 22px;
  font-weight: bold;
}
.news-user-date {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  column-gap: 1rem;
  margin-bottom: 1rem;
  font-size: 16px;
}
.news-user-date-1 {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  column-gap: 1rem;
  margin-bottom: 1rem;
  font-size: 12px;
}
.news-user-date-2 {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  column-gap: 1rem;
  margin-bottom: 1rem;
  font-size: 12px;
}
.news-user {
  display: flex;
  justify-content: center;
  align-items: center;
  column-gap: 0.5rem;
}
.news-date {
  display: flex;
  justify-content: center;
  align-items: center;
  column-gap: 0.5rem;
}
/* CHOOSE US SECTION STYLES */
.choose-us-container {
  background-color: #f5f7eb;
}
.choose-us-data {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.choose-us-text {
  margin-bottom: 3rem;
}
.choose-us-list {
  display: flex;
  column-gap: 1.2rem;
}
.choose-us-list ul li {
  background-color: #fff;
  margin-bottom: 1rem;
  border-radius: 10px;
  padding: 1rem;
  width: 100%;
  height: 106px;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
}
.choose-us-list ul li div {
  font-size: 22px;
  font-weight: 500;
  margin-bottom: 0.5rem;
}
.choose-us-list ul li p {
  font-size: 16px;
}
/* CUSTOMERS STYLES */
.customers-section-container {
  display: grid;
  align-items: center;
}
.customers-data {
  background-image: url("./assets/images/customer-bg-vector.png");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  height: 100%;
  width: 100%;
  padding: 2rem 1rem;
  display: grid;
  align-items: center;
}
.customers-data ul {
  display: flex;
  justify-content: center;
  align-items: center;
  column-gap: 1.5rem;
}
.customers-data ul li {
  display: flex;
  justify-content: center;
  align-items: center;
  column-gap: 1rem;
  color: #fff;
}
.customers-data ul li img {
  height: 60px;
  width: auto;
}
.customer-info div {
  font-size: 35px;
  font-weight: 500;
}
.customer-info p {
  font-size: 20px;
}
/* ... */

